--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #f0f0f0; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
