--- a/src/app/All/navbar/navbar.component.css
+++ b/src/app/All/navbar/navbar.component.css
@@ -1,5 +1,16 @@
 .navbar {
     z-index: 600000;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.deco {
+    font-size: 0.8em;
+}
+
+.connect {
+    width: 40px;
 }
 
 @media screen and (max-width: 8000px)
@@ -65,6 +76,8 @@
     padding:2px 5px 2px 5px;
     position: relative;
     bottom: 1.3em;
+    bottom: 50px;
+    left: 30px;
 }
 
 .marge-top {
