--- a/src/app/Buyer/categories/categories.component.css
+++ b/src/app/Buyer/categories/categories.component.css
@@ -8,7 +8,7 @@
 }
 .categories {
     background-color: #1a1a1a;
-    width: 85%;
+    width: 65%;
     height:3rem;
     text-align: end;
     padding:13px 22px 0px 0px;
@@ -19,7 +19,7 @@
     margin-left: 5px;
     font-family:Rubik, Arial, Helvetica, sans-serif;
     text-transform:uppercase;
-    font-size: 1em;
+    font-size: 0.8sem;
 }
 
 .categ {
