--- a/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
+++ b/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
@@ -1,6 +1,49 @@
-<div class="container">
-    <div class="row">
-        <app-announce-item class="col-12" *ngFor="let placeholderForDBAnnounce of placeholderForDBListOfAnnounces.results"
-            [announce]="placeholderForDBAnnounce"></app-announce-item>      
+<div *ngFor="let announce of listAnnonces">
+    <div class="card">
+        <div class="card-body">
+            <div class="announceItem row">
+                <div class="col-4 announceImage">
+                    <img [src]="announce.image" placeholder="image" class="image">
+                </div>
+                <div class="col-4 announceText text">
+                    <div class="groupOfText">
+                        <div>
+                            Année:
+                            <div class="text-muted">
+                                {{announce.year}}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="groupOfText">
+                        <div>
+                            Moto:
+                        </div>
+                        <div class="text-muted">
+                            {{announce.brand}}
+                        </div>
+                    </div>
+
+                    <div class="groupOfText">
+                        <div>
+                            Type:
+                        </div>
+                        <div class="text-muted">
+                            {{announce.pieceName}}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4 accessMore">
+                    <div class="description">
+                        {{announce.description}}
+                    </div>
+                    <div class="price">
+                        Prix: {{announce.price}}€
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
