--- a/src/app/Buyer/announce-item/announce-item.component.html
+++ b/src/app/Buyer/announce-item/announce-item.component.html
@@ -5,7 +5,7 @@
         <img [src]="announce.image" placeholder="image" class="image">
       </div>
       <div class="col-4 announceText text">
-        <div class="groupOfText">
+        <div class="groupOfText year">
           <div>
             Année:
             <div class="text-muted">
