--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -1,6 +1,10 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <div class="row mt-5">
+<div class="seller">
+  <div class="title">
+    <h2>MON ESPACE</h2>
+  </div>
+<div class="container sellerPage">
+  <div class="row">
     <div class="col-lg-12">
       <ngb-tabset>
         <ngb-tab title="Création annonce">
@@ -20,6 +24,7 @@
       </ngb-tabset>
     </div>
   </div>
+</div>
 
   <!-- <mat-tab-group animationDuration="0ms" [color]="red">
     <mat-tab label="Création annonce"><app-tab-creation></app-tab-creation></mat-tab>
