Edit seller password by seller

--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -13,17 +13,12 @@
             <app-tab-announce></app-tab-announce>
           </ng-template>
         </ngb-tab>
-        <ngb-tab title="Historique">
+        <ngb-tab title="Compte">
           <ng-template ngbTabContent>
+            <app-tab-compte></app-tab-compte>
           </ng-template>
         </ngb-tab>
       </ngb-tabset>
     </div>
   </div>
-
-  <!-- <mat-tab-group animationDuration="0ms" [color]="red">
-    <mat-tab label="Création annonce"><app-tab-creation></app-tab-creation></mat-tab>
-    <mat-tab label="Mes annonces"><app-tab-announce></app-tab-announce></mat-tab>
-    <mat-tab label="Historique">Cay pas fé</mat-tab>
-  </mat-tab-group> -->
 </div>
