--- a/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
+++ b/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div *ngFor="let announce of listAnnonces">
     <div class="card">
         <div class="card-body">
@@ -46,4 +47,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
