--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -9,7 +9,6 @@
             <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-74095" href="#card-element-616950">
               <div class="card-header">
                 Véhicule
-
                 <p class="float-right arrow">&#8964;</p>
               </div>
             </a>
@@ -18,34 +17,46 @@
               <div class="card-body">
                   
                 <div class="input-group mb-3 form-group">
-                  <select  class="custom-select" id="brand" formControlName="brand" (click)="getMarque()">
+                  <select  class="custom-select" id="brand" formControlName="brand" [(ngModel)]="brand"
+                  [ngClass]="{ 'is-invalid': submitted && f.brand.errors }">
                     <option selected="">Marque</option>
                     <option *ngFor="let brand of brands">{{brand}}</option>
                   </select>
+                  <div *ngIf="submitted && f.brand.errors" class="invalid-feedback">
+                    <div *ngIf="f.brand.errors.required">champs requis</div>
+                  </div>
                 </div>
 
                 <div class="input-group mb-3">
-                  <select class="custom-select" id="cylinder" formControlName="cylinder" (click)="getCylindree()" [disabled]="!choixMarque">
-                    <option selected="selected">Cylindré</option>
-                    <option *ngFor="let cylinder of cylinders">{{cylinder}}</option>
-                  </select>
-                </div>
-
-                <div class="input-group mb-3">
-                  <select class="custom-select" id="model" formControlName="model" (click)="getModele()" [disabled]="!choixCylindree">
+                  <select class="custom-select" id="model" formControlName="model" [(ngModel)]="model"
+                  [ngClass]="{ 'is-invalid': submitted && f.model.errors }">
                     <option selected="selected">Modèle</option>
                     <option *ngFor="let motoModel of motoModels">{{motoModel}}</option>
                   </select>
+                  <div *ngIf="submitted && f.model.errors" class="invalid-feedback">
+                    <div *ngIf="f.model.errors.required">champs requis</div>
+                  </div>
                 </div>
 
                 <div class="input-group mb-3">
-                  <select class="custom-select" id="year" formControlName="year"  [disabled]="!choixModele">
+                  <select class="custom-select" id="cylinder" formControlName="cylinder" [(ngModel)]="cylinder"
+                  [ngClass]="{ 'is-invalid': submitted && f.cylinder.errors }">
+                    <option selected="selected">Cylindré</option>
+                    <option *ngFor="let cylinder of cylinders">{{cylinder}}</option>
+                  </select>
+                  <div *ngIf="submitted && f.cylinder.errors" class="invalid-feedback">
+                    <div *ngIf="f.cylinder.errors.required">champs requis</div>
+                  </div>
+                </div>
+
+                <div class="input-group mb-3">
+                  <select class="custom-select" id="year" formControlName="year" [(ngModel)]="year"
+                  [ngClass]="{ 'is-invalid': submitted && f.year.errors }">
                     <option selected="selected">Année</option>
                     <option *ngFor="let year of years">{{year}}</option>
                   </select>
-
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Vroum...</button>
+                  <div *ngIf="submitted && f.year.errors" class="invalid-feedback">
+                    <div *ngIf="f.year.errors.required">champs requis</div>
                   </div>
                 </div>
 
@@ -61,22 +72,20 @@
 
       <div class="col-md-3 mt-5">
         <div class="card">
-          <div class="card-header">
-            <p class="card-text">Votre moto</p>
+          <div class="card-header text-center">
+            <p *ngIf="!brand" class="card-text">Votre moto</p>
+            <p *ngIf="brand" class="card-text">{{brand}} {{model}} {{cylinder}} {{year}}</p>
           </div>
         </div>
       </div>
     </div>
-    <!-- Ajout d'un champ pour le titre de l'annonce -->
-    <div class="input-group mt-3">
-      <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
-        placeholder="Entrez le titre de votre annonce ...">
-    </div>
+
     <!-- Ajout bouton pour importer les photos de l'annonce -->
     <div class="ajoutPhoto mt-3">
       <div class="single-upload">
         <h3>Choisir une photo :</h3>
-        <form id="singleUploadForm" name="singleUploadForm"> 
+        <form id="singleUploadForm" name="singleUploadForm">
+          <div *ngIf="noInputUri" class="noInput">champs requis</div> 
           <img [src]="url" height="150">
           <input id="singleFileUploadInput" type="file" name="file" class="file-input" required (change)="onSelectFile($event)" />
           <button type="submit" class="primary submit-btn">Valider</button>
@@ -93,6 +102,7 @@
       <div class="col-6">Vous avez choisi le type :
           <button *ngIf="pieceType != null" type="button" class="btn btn-success">{{pieceType}}</button>
       </div>
+      <div *ngIf="noInputPieceType" class="noInput">champs requis</div>
       </div>  
       <div class="container-fluid">
           <div class="row">
@@ -531,19 +541,31 @@
       <div>
         <h5>Description de votre pièce :</h5>
         <!-- ajout champ pour décrire l'état de la pièce -->
-        <textarea id="description" class="form-control" formControlName="description" rows="5" aria-label="With textarea"></textarea>
+        <textarea id="description" class="form-control" formControlName="description" rows="5" aria-label="With textarea"
+        [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
+        <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+          <div *ngIf="f.description.errors.required">champs requis</div>
+        </div>
       </div>
       <!-- ajout champ pour donner la plage de compatibilité de la pièce-->
       <h5 class="mt-5">Choix de l'état de la pièce:</h5>
       <div class="note mt-1">
-        <ngb-rating id="note" class="form-control" formControlName="note" [(rate)]="rateChoice" class="star"></ngb-rating>
+        <ngb-rating id="note" class="form-control" formControlName="note" [(rate)]="rateChoice" class="star"
+        [ngClass]="{ 'is-invalid': submitted && f.note.errors }"></ngb-rating>
         <hr>
         <pre>Etat de la pièce : <b>{{rateChoice}}</b></pre>
+        <div *ngIf="submitted && f.note.errors" class="invalid-feedback">
+          <div *ngIf="f.note.errors.required">champs requis</div>
+        </div>
       </div>
       <!-- ----------- ---------------------- ----------------- CHOIX DU PRIX DE LA PIECE -------------- -------------- ----------------- -->
       <div>
         <h5>Choix du prix de vente:</h5>
-        <input id="price" class="form-control" formControlName="price" class="price"><span class="priceSign ml-2">€</span>
+        <input id="price" class="form-control" formControlName="price" class="priceClas"><span class="priceSign ml-2">€</span>
+      </div>
+      <div>
+        <h5>Frais de port:</h5>
+        <input id="change" class="form-control" formControlName="change" class="priceClas"><span class="priceSign ml-2">€</span>
       </div>
       <div class="row mt-5 mb-3">
         <div class="col-lg-12 text-center">
