virtual scroll in home page for announces

--- a/src/app/Buyer/announce-list/announce-list.component.html
+++ b/src/app/Buyer/announce-list/announce-list.component.html
@@ -1,6 +1,12 @@
+<!-- <div class="row announceContainer">
+      <app-announce-item class="col-12" *ngFor="let announce of listAnnonces, let i = index" [announce]="announce"
+            [index]="i"></app-announce-item>
 
-  <div class="row announceContainer">
-        <app-announce-item class="col-12" *ngFor="let announce of listAnnonces, let i = index"
-              [announce]="announce" [index]="i"></app-announce-item>
-              
-  </div>
+</div> -->
+<div class="row announceContainer">
+      <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
+            <ng-container *cdkVirtualFor="let announce of listAnnonces, let i = index">
+                  <app-announce-item [announce]="announce" [index]="i"></app-announce-item>
+            </ng-container>
+      </cdk-virtual-scroll-viewport>
+</div>
