Admin company list table modified

--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -7,10 +7,13 @@
             Raison Sociale
           </th>
           <th>
-            SIREN
+            Adresse
           </th>
           <th>
-            Adresse
+            Code Postal
+          </th>
+          <th>
+            Ville
           </th>
           <th>
             Tel
@@ -32,10 +35,13 @@
             {{seller.raisonSociale}}
           </th>
           <th>
-            {{seller.siren}}
+            {{seller.adresse1}}
           </th>
           <th>
-            {{seller.adresse1}}
+            {{seller.codePostal}}
+          </th>
+          <th>
+            {{seller.ville}}
           </th>
           <th>
             {{seller.telephone}}
