--- a/src/app/Buyer/announce-piece/announce-piece.component.html
+++ b/src/app/Buyer/announce-piece/announce-piece.component.html
@@ -1,24 +1,19 @@
 <app-navbar></app-navbar>
-<div class="container">
+<div class="container piecePage">
 
-  <div class="row text-center announcePiecePage">
-
-    <div class="col-12 offset-sm-6 col-sm-4 text-center announceTitle">
-      {{annonce.pieceName}}
+  <div class="text-center announcePiecePage">
+    <div class="row">
+    <div class="col-lg-12 col-md-12 text-center announceTitle">
+      {{annonce.pieceName}} {{annonce.brand}} {{annonce.model}} {{annonce.cylinder}}
       <hr />
     </div>
-    <p class="announcePrice col-sm-2 d-none d-sm-block">{{annonce.price}}€</p>
 
-    <div class="col-12 float-sm-left col-sm-4 announceImageDiv">
+    <div class="row">
+    <div class="col-lg-4 col-xs-12 announceImageDiv">
       <img class="announceImage col-sm-12" src="{{annonce.image}}" placeholder="image">
     </div>
   
-    <div class="col-sm-8">
-      <div class="
-            col-12 text-sm-left announceDescription">
-        <p class="announcePrice d-sm-none">
-          {{annonce.price}}€
-        </p>
+      <div class="col-lg-4 col-xs-12 announceDescription">
 
         <p class="announceDesc font-weight-bold">
           <br>
@@ -42,20 +37,21 @@
           <br class="d-sm-none sautAnnonce">
         </p>
       </div>
+      <div class="shop col-lg-4 col-xs-12">
+        <p class="announcePrice">{{annonce.price}}€</p>
+        <label type="button" class="btn panier btn-warning">
+          <img class="shopping" src="../../../assets/shopping.png">
+          Ajouter au panier
+        </label>
+      </div>
     </div>
+  
 
-    <div class="btn-group col-12 d-sm-none bottomButtons" data-toggle="buttons">
-      <label type="button" class="btn btn-warning col-6" (click)="returnLastPage()">
+    <div class="btn-group col-lg-2 col-xs-12 retour" data-toggle="buttons">
+      <label type="button" class="btn btn-warning btnRetour" (click)="returnLastPage()">
         Retour
       </label>
-      <label type="button" class="btn btn-warning col-6">
-        Ajouter au panier
-      </label>
     </div>
-
-    <div class="d-none d-sm-block col-12">
-      <label type="button" class="btn btn-warning offset-4 col-2" (click)="returnLastPage()">Retour</label>
-      <label type="button" class="btn btn-warning offset-2 col-2">Ajouter au panier</label>
     </div>
 
   </div>
