modif front info compte buyer

--- a/src/app/Sign-up/my-account/adresses/adresses.component.html
+++ b/src/app/Sign-up/my-account/adresses/adresses.component.html
@@ -1,3 +1,4 @@
+
 <div class="margetop">
   <div class=" row">
     <div class="col-12">
@@ -6,7 +7,6 @@
       </div>
     </div>
   </div>
-
 
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="account__box ">
@@ -90,7 +90,7 @@
               </div>
             </div>
         <div>
-            <button type="submit" class="btn btn-warning text-white mb-2">Valider</button>
+            <button type="submit" class="btn mb-2">Valider</button>
         </div>
       </div>
     </div>
