--- a/src/app/Sign-up/my-account/infosperso/infosperso.component.html
+++ b/src/app/Sign-up/my-account/infosperso/infosperso.component.html
@@ -9,7 +9,7 @@
   </div>
 
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 infoPerso">
     <div *ngIf="registerForm">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="account__box ">
@@ -127,7 +127,7 @@
           </div>
         </div>
           <div>
-              <button type="submit" class="btn btn-warning text-white  mb-2">Validez</button>
+              <button type="submit" class="btn  mb-2">Validez</button>
           </div>
         </div>
       </div>
