--- a/src/app/Sign-up/my-account/adresses/adresses.component.css
+++ b/src/app/Sign-up/my-account/adresses/adresses.component.css
@@ -23,13 +23,13 @@
     line-height: 20px;
     font-size: 20px;
     color: #144a82;
-    background: white;
     text-transform: uppercase;
     padding: 0 10px;
+    background-color: #f0f0f0;
 }
 
 .account__box__title {
-    background: #f5f5f5;
+    background: #C5DFFD;
     color: #144a82;
     font-size: 16px;
     font-weight: 700;
@@ -40,6 +40,7 @@
 .account__box {
     margin-bottom: 3vh;
     border: 1px solid #585656;
+    background-color: white;
 
 }
 .box_inner{
@@ -55,12 +56,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    background: #C5DFFD;
+    border: none;
+    color: #144a82;
 }
 
 @media (max-width: 767px) {
 
     .btn{
         display: inline
+
     }
     .label {
         text-align: left;
