--- a/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
+++ b/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div>
-              <button type="submit" class="btn btn-warning text-white  mb-2">Validez</button>
+              <button type="submit" class="btn mb-2">Validez</button>
           </div>
         </div>
       </div>
