--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -2,7 +2,7 @@
 <div class="seller">
   <div class="container">
     <div class="title">
-      <h2>MON ESPACE</h2>
+      <h2>MON ESPACE DE GESTION</h2>
     </div>
   <div class="container sellerPage">
   <div class="row">
