--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <li class="nav-item active col-4">
           <a class="nav-link" routerLink="/panier">
             <img class="shop" src="../../../assets/shopping.png">
-            <span class="numberOfArticles">{{mockNumberOfArticles}}</span>
+            <span class="numberOfArticles">{{nbArticles}}</span>
           </a>
         </li>
 
