--- a/src/app/Buyer/panier/panier.component.html
+++ b/src/app/Buyer/panier/panier.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
   <h1 class="text-center mt-3">Votre panier</h1>
   <mat-horizontal-stepper labelPosition="bottom" #stepper class="mt-1">
@@ -21,7 +22,7 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <!-- Checkbox Column -->
-  <ng-container matColumnDef="select">
+  <!-- <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
       <mat-checkbox (change)="$event ? masterToggle() : null"
                     [checked]="selection.hasValue() && isAllSelected()"
@@ -36,24 +37,29 @@
       </mat-checkbox>
       <img src="assets/corbeille.png" width="25" height="25" class="ml-1 mb-2">
     </td>
-    </ng-container>
+    </ng-container> -->
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="article">
+    <!-- Piece Column -->
+    <ng-container matColumnDef="pieceName">
       <th mat-header-cell *matHeaderCellDef> Article </th>
-      <td mat-cell *matCellDef="let element"> {{element.article}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.pieceName}}  {{element.brand}}  {{element.model}} </td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="prix_unitaire">
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> Prix unitaire </th>
-      <td mat-cell *matCellDef="let element">{{element.prix_unitaire}}</td>
+      <td mat-cell *matCellDef="let element">{{element.price}}<span>€</span></td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="prix_ttc">
-      <th mat-header-cell *matHeaderCellDef> Prix TTC </th>
-      <td mat-cell *matCellDef="let element"> {{element.prix_ttc}} </td>
+    <!--  Column -->
+    <ng-container matColumnDef="charge">
+      <th mat-header-cell *matHeaderCellDef> Frais de Port </th>
+      <td mat-cell *matCellDef="let element"> {{element.charge}}<span>€</span> </td>
+    </ng-container>
+
+    <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef>Supprimer</th>
+    <td><a (click)="delete(seller.username)"><i class="material-icons icons">delete_sweep</i></a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -63,9 +69,9 @@
   </table>
 
   <div class="total mt-4">
-    <p>Sous total produits TTC: 450€</p><hr>
-    <p>Frais de port: 20€</p><hr>
-    <p class="prix_total">TOTAL TTC À PAYER: 470€</p><hr>
+    <p>Sous total produits TTC: </p>{{sousTotal}}<span>€</span><hr>
+    <p>Frais de port: </p>{{port}}<span>€</span><hr>
+    <p class="prix_total">TOTAL TTC À PAYER: </p>{{total}}<span>€</span><hr>
   </div>
 
   <div class="row text-center mt-2 mb-4">
